[FIND-330] Fixed the size of the double chevrons that collapse filters and related concepts.
As said on the ticket, hp-lg icons (which is what chevrons are using) were set in em size. This caused inconsistency in sizes as they were relative to their containers. Both are now fix 18px.

[rev:trivial]

--- a/webapp/core/src/main/less/app-include.less
+++ b/webapp/core/src/main/less/app-include.less
@@ -355,6 +355,10 @@ dt {
       font-weight: bold;
     }
   }
+
+  .container-toggle {
+    font-size: 18px;
+  }
 }
 
 .bootstrap-datetimepicker-widget {
